@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.3-2.4
-Date: 2008-12-06
+Version: 0.3-2.5
+Date: 2008-12-16
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), filehash, Matrix, methods, Snowball, XML
